--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -3,36 +3,44 @@ html {
   font-family: Helvetica;
 }
 
-.navbar {
+#navbar {
   background-image: url("https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/the-flatiron-building.png");
-
 }
-.title {
-  color: white;
+
+#title {
   font-size: 70px;
-  font-weight: bold;
-}
-.process {
-  font-size: 32px;
-}
-.break {
-  color: white;
-  font-size: 23px;
-  background-image: url("https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/the-flatiron-building.png");
 }
 
-h1 {
-  font-weight: bold;
+nav {
+  text-decoration: underline;
+}
+
+#process {
+  font-size: 32px;
 }
 
 h2 {
   font-size: 23px;
-  font-weight: bold;
 }
 p {
   font-size: 14px;
 }
 
-a {
+#break {
+  font-size: 23px;
+  background-image: url("https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/the-flatiron-building.png");
+}
 
+.bold {
+  font-weight: bold;
+}
+
+.white {
+  color: white;
+}
+
+footer {
+text-align: left;
+background-color: dimgray;
+font-size: 11px;
 }
